--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.9.2"
-kotlin = "2.0.21"
+kotlin = "1.9.23"
+#kotlin = "2.0.21"
 coreKtx = "1.10.1"
 junit = "4.13.2"
 junitVersion = "1.1.5"
@@ -40,10 +41,9 @@ support-v13 = { group = "com.android.support", name = "support-v13", version.ref
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-ksp = { id = "com.google.devtools.ksp", version = "1.9.0-1.0.13"}
-google-services = { id = "com.google.gms.google-services", version = "4.4.0"}
-
-
+ksp = { id = "com.google.devtools.ksp", version = "1.9.23-1.0.20"}
+# Needed for FireBase
+#google-services = { id = "com.google.gms.google-services", version = "4.4.0"}
 
 
 
