--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,8 @@
 [versions]
 agp = "8.9.2"
-kotlin = "1.9.23"
+#kotlin = "1.9.23"
 #kotlin = "2.0.21"
+kotlin = "2.1.20"
 coreKtx = "1.10.1"
 junit = "4.13.2"
 junitVersion = "1.1.5"
@@ -19,6 +20,7 @@ fragmentKtx = "1.8.6"
 supportAnnotations = "28.0.0"
 room = "2.7.1"
 supportV13 = "28.0.0"
+roomCommonJvm = "2.7.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -37,11 +39,13 @@ androidx-legacy-support-v4 = { group = "androidx.legacy", name = "legacy-support
 androidx-fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragmentKtx" }
 support-annotations = { group = "com.android.support", name = "support-annotations", version.ref = "supportAnnotations" }
 support-v13 = { group = "com.android.support", name = "support-v13", version.ref = "supportV13" }
+androidx-room-common-jvm = { group = "androidx.room", name = "room-common-jvm", version.ref = "roomCommonJvm" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-ksp = { id = "com.google.devtools.ksp", version = "1.9.23-1.0.20"}
+#ksp = { id = "com.google.devtools.ksp", version = "1.9.23-1.0.20"}
+ksp = { id = "com.google.devtools.ksp", version = "2.1.20-2.0.1"}
 # Needed for FireBase
 #google-services = { id = "com.google.gms.google-services", version = "4.4.0"}
 
