--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -46,6 +46,7 @@ android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 #ksp = { id = "com.google.devtools.ksp", version = "1.9.23-1.0.20"}
 ksp = { id = "com.google.devtools.ksp", version = "2.1.20-2.0.1"}
+navigation-safe-args     = { id = "androidx.navigation.safeargs.kotlin", version.ref = "navigationFragmentKtx" }
 # Needed for FireBase
 #google-services = { id = "com.google.gms.google-services", version = "4.4.0"}
 
