--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,8 @@ supportAnnotations = "28.0.0"
 room = "2.7.1"
 supportV13 = "28.0.0"
 roomCommonJvm = "2.7.1"
+googleGmsGoogleServices = "4.4.2"
+firebaseDatabase = "21.0.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -40,6 +42,7 @@ androidx-fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", ve
 support-annotations = { group = "com.android.support", name = "support-annotations", version.ref = "supportAnnotations" }
 support-v13 = { group = "com.android.support", name = "support-v13", version.ref = "supportV13" }
 androidx-room-common-jvm = { group = "androidx.room", name = "room-common-jvm", version.ref = "roomCommonJvm" }
+firebase-database = { group = "com.google.firebase", name = "firebase-database", version.ref = "firebaseDatabase" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -47,6 +50,7 @@ kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 #ksp = { id = "com.google.devtools.ksp", version = "1.9.23-1.0.20"}
 ksp = { id = "com.google.devtools.ksp", version = "2.1.20-2.0.1"}
 navigation-safe-args     = { id = "androidx.navigation.safeargs.kotlin", version.ref = "navigationFragmentKtx" }
+google-gms-google-services = { id = "com.google.gms.google-services", version.ref = "googleGmsGoogleServices" }
 # Needed for FireBase
 #google-services = { id = "com.google.gms.google-services", version = "4.4.0"}
 
